# gpu_compute_draft_15

./: .gitignore  Cargo.toml  README.md
amdsmi/: Cargo.toml  README.md
amdsmi-sys/: Cargo.toml  README.md  build.rs
hip/: Cargo.toml  README.md  global_array-hip-amdgcn-amd-amdhsa-gfx1032.bc  global_array-hip-amdgcn-amd-amdhsa_gfx1032.ll  global_array.cpp  module_gfx1032.co
hip-sys/: Cargo.toml  README.md  build.rs  wrapper_hip_runtime.h  wrapper_hiprtc.h
hsa/: Cargo.toml  README.md  global_array-hip-amdgcn-amd-amdhsa-gfx1032.bc  global_array-hip-amdgcn-amd-amdhsa_gfx1032.ll  global_array.cpp
hsa-sys/: Cargo.toml  README.md  build.rs  wrapper.h
opencl/: Cargo.toml  README.md
opencl-collections/: Cargo.toml  README.md
opencl-collections-examples/: Cargo.toml  README.md
opencl-examples/: Cargo.toml  README.md
opencl-node/: Cargo.toml  README.md  index.d.ts  index.js  jest.config.js  package-lock.json  package.json
opencl-node/npm/darwin-x64/: README.md  package.json
opencl-node/npm/linux-x64-gnu/: README.md  package.json
opencl-node/npm/win32-x64-msvc/: README.md  package.json
opencl-node/src/: lib.rs  lru_cache.rs  map.rs  mini_lru_cache.rs  ocl.rs  serialize.rs
opencl-node/test/: helpers.ts  index.spec.ts  lru_cache.spec.ts  map.spec.ts  ttl_cache.spec.ts
opencl-sys/: Cargo.toml  README.md  build.rs  wrapper.h
resources/: DESIGN_TEMPLATE.md  bubble_sort.c  circular_queue.c  linear_queue.c  priority_queue_ordered_array.c  priority_queue_unordered_array.c  selection_sort.c  stack.c  sum.cl
utilities/: Cargo.toml  README.md
(+214 files in other folders)
