[package]
edition = "2021"
name = "opencl-node"
version = "0.1.9"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi9", "serde-json", "serde"] }
napi-derive = "2.12.2"
serde_json = "1.0.112"
serde = { version = "1.0", features = ["serde_derive"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
opencl-collections = { path = "../opencl-collections" }

[build-dependencies]
napi-build = "2.0.1"

#[profile.release]
#lto = true
#strip = "symbols"
